src/snapshots/fuzz_crash/fuzz_crash_011.txt
~~~META
description=fuzz crash
type=file
~~~SOURCE
module P]F
~~~PROBLEMS
Misplaced carriage return character

SYNTAX PROBLEM

Expected '[' in the module header.

module P]F
Note: This is a parse error. Check your syntax.
SYNTAX PROBLEM

Expected ':' after the type annotation.

module P]F
Note: This is a parse error. Check your syntax.
~~~TOKENS
KwModule(1:1-1:7),UpperIdent(1:8-1:9),UpperIdent(1:10-1:11),EndOfFile(1:11-1:11),
~~~PARSE
(file (1:1-1:11)
	(malformed_header (1:8-1:9) "header_expected_open_square")
	(statements (malformed_stmt (1:10-1:11) "expected_colon_after_type_annotation")))
~~~FORMATTED

~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END